--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -33,7 +34,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2"
   }
 }
