--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
@@ -35,6 +36,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.6",
     "ts-node": "^10.9.2"
   }
 }
