--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -28,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.12.0",
+    "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
