--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register index.ts",
+    "start": "ts-node -r tsconfig-paths/register index.ts",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "author": "",
   "license": "ISC",
@@ -38,6 +40,8 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0"
   }
 }
