--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,16 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "moduleResolution": "node10",
+
+    "rootDir": "./",
     "baseUrl": "./src",
     "paths": {
-      // "@infrastructure/*": ["infrastructure/*"],
-      // "@useCases/*": ["use-cases/*"],
-      // "@adapters/*": ["adapters/*"],
+      "@infrastructure/*": ["infrastructure/*"],
+      "@useCases/*": ["use-cases/*"],
+      "@adapters/*": ["adapters/*"],
       "@entities": ["entities/index"]
     },
+
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -18,5 +21,5 @@
     "skipLibCheck": true
   },
   "compileOnSave": true,
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.json"]
+  "include": ["src/**/*"]
 }
