--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
-    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -41,11 +40,13 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.3",
     "@types/pg": "^8.11.6",
-    "ts-node": "^10.9.2",
+    "@types/supertest": "^6.0.2",
     "@types/web-push": "^3.6.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0"
   }
