--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# DATABASE_URL="mongodb+srv://mathnyanlin:7ZUORoK1izYdQQUo@deli.wagembt.mongodb.net/"
+MONGO_URL="mongodb://localhost:27017/food"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+jwt_sec = "file";
 
-DATABASE_URL="mongodb+srv://mathnyanlin:7ZUORoK1izYdQQUo@deli.wagembt.mongodb.net/"
+PORT = 8080
