--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register index.ts",
     "start": "ts-node -r tsconfig-paths/register index.ts",
-    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json"
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "test": "jest --coverage",
+    "prepare": "husky",
+    "lint": "eslint 'src/**/**/*.{ts,tsx}' --fix",
+    "format": "prettier --write 'src/**/**/*.{ts}'"
   },
-  "author": "",
+  "lint-staged": {
+    "src/**/**/*.{ts, tsx, js, jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/**/*.{json, css, md}": [
+      "prettier --write"
+    ]
+  },
+  "author": "Min Nyan Lin",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.18.0",
@@ -16,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -23,31 +37,44 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "inversify": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.10.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
     "@types/web-push": "^3.6.3",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "3.3.3",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.2"
   }
 }
