--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register index.ts",
+    "prepare": "husky",
     "start": "ts-node -r tsconfig-paths/register index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register index.ts",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "test": "jest --coverage",
-    "prepare": "husky",
     "lint": "eslint 'src/**/**/*.{ts,tsx}' --fix",
     "format": "prettier --write 'src/**/**/*.{ts}'"
   },
@@ -23,7 +23,6 @@
   "author": "Min Nyan Lin",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -40,15 +39,14 @@
     "express": "^4.19.2",
     "inversify": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
+    "log4js": "^6.9.1",
     "mongoose": "^8.4.0",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "ts-node-dev": "^2.0.0",
-    "web-push": "^3.6.7",
-    "winston": "^3.14.2"
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
