add docker compose

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # DATABASE_URL="mongodb+srv://mathnyanlin:7ZUORoK1izYdQQUo@deli.wagembt.mongodb.net/"
 MONGO_URL="mongodb://localhost:27017/food"
 
-jwt_sec = "file";
+jwt_sec = "file"
 
 PORT = 8080
