--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES2021",
     "experimentalDecorators": true,
     "module": "commonjs",
     "moduleResolution": "node10",
