--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,15 @@ services:
       MONGO_URL: mongodb://mongo_db:27017/foods
     depends_on:
       - mongo_db
-
+  
+  front_end:
+    build:
+      context: ./frontend
+    container_name: react-frontend
+    ports:
+      - "3000:5173"
+    depends_on:
+      - node_app
+      
 volumes:
   mongo_db: {}
